# kaggle-bench

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ARTIFACT_POLICY.md  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json  task_review_rules.md
.github/workflows/: agent-unit-tests.yml  ci.yml  eval-unit-tests.yml  pr-basic-checks.yml  validate-eval-artifacts-schema.yml  validate-golden-actions-schema.yml  validate.yml
agent/: METHOD_IMPLEMENTATION_REVIEW.md  README.md  __init__.py  action_bank.py  build_paper_tables.py  config.py  context_builder.py  data_access.py  output_artifacts.py  prediction_validation.py  profile_cache.py  run_matrix.py  summaries.py  task_bundle.py  tool_registry.py
agent/agentic_core/: README.md  execution.py  parsing.py  request_controls.py  scratchpad.py  scratchpad_tools.py  tool_runtime.py  trace.py  types.py
agent/claude_code/: README.md  __init__.py  command.py  run_claude_code.sh  run_claude_code_campaign.py  runner.py  stream.py  trace.py  workspace.py
agent/generic_agent/: README.md  __init__.py  request_context.py  runner.py  tools.py  workspace.py
agent/llm/: __init__.py  anthropic_client.py  auth.py  client.py  config.py  guards.py  pricing.py  telemetry.py  types.py
agent/profiles/: __init__.py  _helpers.py  boolean_like.py  categorical.py  datetime.py  join.py  missingness.py  numeric.py  roles.py  schema.py  target.py
agent/prompts/: __init__.py  claude_code.py  generic_agent.py  (+3 more)
data/: README.md  TASK_AUTHORING.md
docs/: DESIGN.md
eval/: README.md  aggregate.py  eval.py  migration_log.md
(+405 files in other folders)
