[project]
name = "kaggle-bench"
version = "0.1.0"
description = "Benchmark for data-science agents repairing tabular preprocessing plans"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.0,<5",
]

[dependency-groups]
dev = [
  "pre-commit>=4.0,<5",
]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
files = [
  "src",
  "eval",
  "data/collector/scripts",
]
exclude = [
  "^data/collector/data/",
  "^docs/",
]

[[tool.mypy.overrides]]
module = ["jsonschema"]
ignore_missing_imports = true
