[project]
name = "kaggle-bench"
version = "0.1.0"
description = "Benchmark for data-science agents repairing tabular preprocessing plans"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.0,<5",
]

[dependency-groups]
dev = [
  "pre-commit>=4.0,<5",
  "pyright>=1.1.390,<2",
  "ruff>=0.14,<0.15",
]

[tool.ruff]
line-length = 120
# Human-baseline work files are committed fixtures (notebook-style cell scripts
# where names are defined across cells); they document actions, not maintained code.
extend-exclude = [
  "data/tasks/*/human_baseline",
  "*.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Campaign scripts adjust sys.path before importing repo modules.
"agent/claude_code/run_claude_code_campaign.py" = ["E402"]
